--- a/styles/theme-base.css
+++ b/styles/theme-base.css
@@ -1,406 +1,7 @@
-/* vim: set et ts=4 sw=4 fdm=marker nocin: : */
-/*!
- * Bootstrap v2.3.2
- *
- * Copyright 2012 Twitter, Inc
- * Licensed under the Apache License v2.0
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Designed and built with all the love in the world @twitter by @mdo and @fat.
- */
 
-.clearfix {
-  *zoom: 1;
-}
-.clearfix:before,
-.clearfix:after {
-  display: table;
-  content: "";
-  line-height: 0;
-}
-.clearfix:after {
-  clear: both;
-}
-.hide-text {
-  font: 0/0 a;
-  color: transparent;
-  text-shadow: none;
-  background-color: transparent;
-  border: 0;
-}
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-nav,
-section {
-  display: block;
-}
-audio,
-canvas,
-video {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-}
-audio:not([controls]) {
-  display: none;
-}
-html {
-  font-size: 100%;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  scroll-behavior: smooth;
-}
-a {
-  border-bottom:1px solid;
-}
-a:focus {
-  outline: thin dotted #333;
-  outline-offset: -2px;
-}
-a:hover,
-a:active {
-  outline: 0;
-}
-sub,
-sup {
-  position: relative;
-  font-size: 75%;
-  line-height: 0;
-  vertical-align: baseline;
-}
-sup {
-  top: -0.5em;
-}
-sub {
-  bottom: -0.25em;
-}
-pre {
-  white-space:pre-wrap;
-}
-#map_canvas img,
-.google-maps img {
-  max-width: none;
-}
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  cursor: pointer;
-}
-label,
-select,
-button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"],
-input[type="radio"],
-input[type="checkbox"] {
-  cursor: pointer;
-}
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button {
-  -webkit-appearance: none;
-}
-textarea {
-  overflow: auto;
-  vertical-align: top;
-}
-@media print {
-  * {
-    text-shadow: none !important;
-    color: #000 !important;
-    background: transparent !important;
-    box-shadow: none !important;
-  }
-  a,
-  a:visited {
-    text-decoration: underline;
-  }
-  a[href]:after {
-    content: " (" attr(href) ")";
-  }
-  abbr[title]:after {
-    content: " (" attr(title) ")";
-  }
-  .ir a:after,
-  a[href^="javascript:"]:after,
-  a[href^="#"]:after {
-    content: "";
-  }
-  pre,
-  blockquote {
-    border: 1px solid #999;
-    page-break-inside: avoid;
-  }
-  thead {
-    display: table-header-group;
-  }
-  tr,
-  img {
-    page-break-inside: avoid;
-  }
-  img {
-    max-width: 100% !important;
-  }
-  @page  {
-    margin: 0.5cm;
-  }
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3;
-  }
-  h2,
-  h3 {
-    page-break-after: avoid;
-  }
-}
-
-.navbar .brand {
-  margin-right:.75rem;
-  float: left;
-  display: block;
-  height: 1.5rem;
-  padding: .75rem .75rem .75rem 1.5rem;
-}
-.navbar .brand:hover,
-.navbar .brand:focus {
-  text-decoration: none;
-}
-.navbar-search {
-  position: relative;
-  float: left;
-  margin-top: .770rem;
-  margin-bottom: 0;
-  width:100%;
-  -moz-box-sizing:border-box;
-  box-sizing:border-box;
-}
-.navbar-search .search-query {
-  margin-bottom: 0;
-  padding: .125rem .5rem;
-  -moz-box-sizing: border-box;
-  box-sizing:border-box;
-  width:100%;
-}
-.navbar-fixed-top .navbar-inner {
-  margin:0 auto;
-}
-.navbar .nav {
-  position: relative;
-  left: 0;
-  display: block;
-  float: left;
-  margin: 0 10px 0 0;
-}
-.navbar .nav > li {
-  float: left;
-}
-.navbar .nav > li > a {
-  float: none;
-  padding: .75rem;
-}
-@-ms-viewport {
-  width: device-width;
-}
-.hidden {
-  display: none;
-  visibility: hidden;
-}
-.visible-phone {
-  display: none !important;
-}
-.visible-tablet {
-  display: none !important;
-}
-.hidden-desktop {
-  display: none !important;
-}
-.visible-desktop {
-  display: inherit !important;
-}
-
-#intro .container {
-  margin:0 auto;
-  display:table;
-}
-
-@media (max-width: 480px) {
-  #intro .download-php { margin: 0; }
-}
-@media (min-width: 768px) and (max-width: 979px) {
-  .hidden-desktop {
-    display: inherit !important;
-  }
-  .visible-desktop {
-    display: none !important ;
-  }
-  .visible-tablet {
-    display: inherit !important;
-  }
-  .hidden-tablet {
-    display: none !important;
-  }
-
-}
-@media (max-width: 767px) {
-  .hidden-desktop {
-    display: inherit !important;
-  }
-  .visible-desktop {
-    display: none !important;
-  }
-  .visible-phone {
-    display: inherit !important;
-  }
-  .hidden-phone {
-    display: none !important;
-  }
-}
-
-
-@media (max-width: 979px) {
-}
-@media (min-width: 980px) {
-}
-@media (min-width: 1200px) {
-}
-@media (min-width: 1500px) {
-}
-
-body, input, textarea {
-    font-family: "Fira Sans", "Source Sans Pro", Helvetica, Arial, sans-serif;
-  font-weight: 400;
-}
-code,
-pre.info,
-.docs .classsynopsis,
-.docs .classsynopsis code {
-  font: normal 0.875rem/1.5rem "Fira Mono", "Source Code Pro", monospace;
-  word-wrap: break-word;
-}
-p code,
-li code,
-dt code,
 dl code {
-  line-height:1.375rem;
-}
+  line-height:1.
 
-body {
-    font-size: 1rem;
-    line-height: 1.5rem;
-    padding-left:0;
-    padding-right:0;
-    padding-bottom:0;
-    margin:0;
-}
-
-button,
-input,
-select,
-textarea {
-    font-family: inherit;
-    font-size: 100%;
-    margin: 0;
-}
-button,
-input {
-    line-height: normal;
-}
-input[type="search"] {
-    -webkit-appearance: textfield;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  line-height: 3rem;
-  margin:0 0 1.5rem;
-  overflow:hidden;
-  text-rendering: optimizeLegibility;
-}
-h1 {
-  font-size: 1.75rem;
-}
-h2 {
-  font-size: 1.5rem;
-}
-h3 {
-  font-size:1.25rem;
-}
-h4 {
-  font-size:1.125rem;
-}
-h5, h6 {
-  font-size: 1rem;
-}
-p {
-  margin:0 0 1.5rem
-}
-ul, ol {
-    margin:0 0 1.5rem 1.5rem;
-    padding:0;
-}
-p:empty {
-    margin:0;
-    height:0;
-    display:none;
-}
-small {
-    font-size: 0.75rem;
-}
-/* use this instead of the obsolete <big> tag */
-.big {
-	font-size: 1.2rem;
-}
-
-blockquote {
-    margin: .75rem 0 .75rem .75rem;
-}
-
-abbr {
-    border-bottom:1px dotted;
-    cursor: help;
-}
-a {
-    text-decoration:none;
-}
-
-hr {
-    margin:1.5rem 0;
-    border:0;
-    height:0;
-    border-top:.25rem solid #99c;
-}
-
-.navbar .brand img {
-    padding:0;
-    opacity:.75;
-    border: 0;
-}
-.navbar a {
-    border:0;
-}
-
-.navbar {
-  border-bottom:.25rem solid;
-  overflow: visible;
-  *position: relative;
-  *z-index: 2;
-}
 
 .page-tools {
   text-align: right;
